--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
     "@angular-devkit/build-angular": "^16.2.2",
     "@angular/cli": "~16.2.2",
     "@angular/compiler-cli": "^16.2.0",
+    "@netlify-builder/deploy": "^5.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^20.6.2",
     "jasmine-core": "~4.6.0",
